--- a/debian/rules
+++ b/debian/rules
@@ -30,8 +30,10 @@ install: build
 	dh_installdirs usr/bin
 
 	# Add here commands to install the package into debian/sipwise-cleanup-tools.
-	install -m 755 acc_backup.pl   debian/sipwise-cleanup-tools/usr/bin/acc_backup.pl
-	install -m 755 binlog-purge.pl debian/sipwise-cleanup-tools/usr/bin/binlog-purge.pl
+	install -m 755 acc_backup.pl   debian/sipwise-cleanup-tools/usr/sbin/acc_backup.pl
+	install -m 755 binlog-purge.pl debian/sipwise-cleanup-tools/usr/sbin/binlog-purge.pl
+	install -m 644 cleanup-tools.conf debian/sipwise-cleanup-tools/etc/cleanup-tools.conf
+	install -m 644 cleanup-tools.cron debian/sipwise-cleanup-tools/etc/cron.d/cleanup-tools
 
 # Build architecture-dependent files here.
 binary-arch: install
