renaming party! I hope this is the last one.

--- a/cleanup-tools.conf
+++ b/cleanup-tools.conf
@@ -1,4 +1,4 @@
-#Sipwise cleanup-tools configuration file
+# ngcp-cleanup-tools configuration file
 
 
 # Note: if set for example to 1, this will backup the overall month,
