--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: sipwise-cleanup-tools
+Source: ngcp-cleanup-tools
 Section: utils
 Priority: extra
 Maintainer: Michael Prokop <mprokop@sipwise.com>
@@ -8,7 +8,7 @@ Homepage: http://sipwise.com/
 Vcs-svn: https://dev.sipwise.com/svn/voip-tools/cleanup-tools
 Vcs-Browser: https://dev.sipwise.com/svn/voip-tools/cleanup-tools
 
-Package: sipwise-cleanup-tools
+Package: ngcp-cleanup-tools
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends}
 Description: Database entry and binlog cleanup
