--- a/debian/rules
+++ b/debian/rules
@@ -32,10 +32,10 @@ install: build
 	mkdir -p $(CURDIR)/debian/ngcp-cleanup-tools/etc/ngcp-cleanup-tools/
 	mkdir -p $(CURDIR)/debian/ngcp-cleanup-tools/etc/cron.d
 	# Add here commands to install the package into debian/ngcp-cleanup-tools.
-	install -m 755 acc_backup.pl   debian/ngcp-cleanup-tools/usr/sbin/acc_backup.pl
-	install -m 755 binlog-purge.pl debian/ngcp-cleanup-tools/usr/sbin/binlog-purge.pl
-	install -m 644 cleanup-tools.conf debian/ngcp-cleanup-tools/etc/ngcp-cleanup-tools/acc_backup.conf
-	install -m 644 cleanup-tools.conf debian/ngcp-cleanup-tools/etc/ngcp-cleanup-tools/binlog_purge.conf
+	install -m 755 acc-cleanup.pl   debian/ngcp-cleanup-tools/usr/sbin/acc-cleanup.pl
+	#install -m 755 binlog-purge.pl debian/ngcp-cleanup-tools/usr/sbin/binlog-purge.pl
+	install -m 644 acc-cleanup.conf debian/ngcp-cleanup-tools/etc/ngcp-cleanup-tools/acc-cleanup.conf
+	#install -m 644 binlog-purge.conf debian/ngcp-cleanup-tools/etc/ngcp-cleanup-tools/binlog-purge.conf
 	install -m 644 cleanup-tools.cron debian/ngcp-cleanup-tools/etc/cron.d/cleanup-tools
 
 # Build architecture-dependent files here.
