--- a/acc-cleanup.conf
+++ b/acc-cleanup.conf
@@ -90,4 +90,38 @@ compress = gzip
 username = root
 password = 1freibier!
 
-connect accounting
+### Example use cases
+
+# No collector running, clean up old acc entries from kamailio db:
+#
+#   connect kamailio
+#   time-column = time
+#   cleanup-days = 90
+#   cleanup acc
+
+# Clean up after mediator by deleting old leftover acc entries and deleting
+# old entries out of acc_trash and acc_backup
+#
+#   # with collector:
+#   connect accounting
+#   # without collector:
+#   connect kamailio
+#
+#   time-column = time
+#   cleanup-days = 30
+#   cleanup acc
+#   cleanup-days = 180
+#   cleanup acc_trash
+#   cleanup acc_backup
+
+# Create monthly backup tables for CDRs older than 6 months. Dump monthly
+# backup tables older than a year to /backup.
+#
+#   connect accounting
+#   time-column = start_time
+#   backup-months = 7
+#   backup-retro = 3
+#   backup cdr
+#   archive-months = 13
+#   archive-target = /backup
+#   archive cdr
