--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ngcp-cleanup-tools
 Section: utils
 Priority: extra
 Maintainer: Sipwise Development Team <support@sipwise.com>
-Build-Depends: debhelper (>= 5)
+Build-Depends: debhelper (>= 5), libtemplate-perl
 Standards-Version: 3.9.2
 Homepage: http://sipwise.com/
 Vcs-svn: https://dev.sipwise.com/svn/voip-tools/cleanup-tools
