--- a/debian/control
+++ b/debian/control
@@ -2,16 +2,20 @@ Source: ngcp-cleanup-tools
 Section: utils
 Priority: extra
 Maintainer: Sipwise Development Team <support@sipwise.com>
-Build-Depends: debhelper (>= 5), libtemplate-perl
-Standards-Version: 3.9.3
+Build-Depends: debhelper (>= 5),
+               libtemplate-perl
+Standards-Version: 3.9.5
 Homepage: http://sipwise.com/
 Vcs-svn: https://dev.sipwise.com/svn/voip-tools/cleanup-tools
 Vcs-Browser: https://dev.sipwise.com/svn/voip-tools/cleanup-tools
 
 Package: ngcp-cleanup-tools-ce
 Architecture: all
-Depends: ${misc:Depends}, ${perl:Depends}, ${shlibs:Depends}
-Conflicts: ngcp-cleanup-tools (<= 0.2.1), ngcp-cleanup-tools-pro
+Depends: ${misc:Depends},
+         ${perl:Depends},
+         ${shlibs:Depends}
+Conflicts: ngcp-cleanup-tools (<= 0.2.1),
+           ngcp-cleanup-tools-pro
 Provides: ngcp-cleanup-tools
 Replaces: ngcp-cleanup-tools
 Description: Database entry and binlog cleanup
@@ -19,8 +23,11 @@ Description: Database entry and binlog cleanup
 
 Package: ngcp-cleanup-tools-pro
 Architecture: all
-Depends: ${misc:Depends}, ${perl:Depends}, ${shlibs:Depends}
-Conflicts: ngcp-cleanup-tools (<= 0.2.1), ngcp-cleanup-tools-ce
+Depends: ${misc:Depends},
+         ${perl:Depends},
+         ${shlibs:Depends}
+Conflicts: ngcp-cleanup-tools (<= 0.2.1),
+           ngcp-cleanup-tools-ce
 Provides: ngcp-cleanup-tools
 Replaces: ngcp-cleanup-tools
 Description: Database entry and binlog cleanup
