Inherit access from All+Sipwise+Developers+NGCP-Projects

--- a/project.config
+++ b/project.config
@@ -4,4 +4,4 @@
 [project]
 	description = Database entry and binlog cleanup
 [access]
-	inheritFrom = NGCP-Projects
+	inheritFrom = All+Sipwise+Developers+NGCP-Projects
