TT#7771 add workaround script for leftover prepaid sems entries
script adapted from mcapetta

removes the cleanup-tools.cron file - moved to templates

Change-Id: Ia4009ec109b57cd999b5a14e42f4077f2734b7fb

--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: ngcp-cleanup-tools
 Section: utils
 Priority: extra
 Maintainer: Sipwise Development Team <support@sipwise.com>
-Build-Depends: debhelper (>= 5),
-               libtemplate-perl
+Build-Depends: debhelper (>= 5)
 Standards-Version: 3.9.7
 Homepage: http://sipwise.com/
 Vcs-svn: https://dev.sipwise.com/svn/voip-tools/cleanup-tools
