TT#5420 Update packaging
- Use canonical homepage URL.
- Fix Vcs-* field URLs.
- Bump debhelper compatibility to 9.
- Bump Standards-Version to 3.9.8.
- Bump source format to 3.0 (native).
- Switch to dh debian/rules.
- Make the package short descriptions unique.
- Fix typo for MySQL in package long descriptions.
- Update copyright years.
- Remove unnecessary prosting maintscript (the directory is shipped).

Change-Id: If5820bb643867ff4a0bf51719c741ec643d38949

--- a/debian/control
+++ b/debian/control
@@ -4,10 +4,10 @@ Priority: extra
 Maintainer: Sipwise Development Team <support@sipwise.com>
 Build-Depends:
  debhelper (>= 9~),
-Standards-Version: 3.9.7
-Homepage: http://sipwise.com/
-Vcs-svn: https://dev.sipwise.com/svn/voip-tools/cleanup-tools
-Vcs-Browser: https://dev.sipwise.com/svn/voip-tools/cleanup-tools
+Standards-Version: 3.9.8
+Homepage: https://www.sipwise.com/
+Vcs-Browser: https://github.com/sipwise/cleanup-tools.git
+Vcs-Git: https://github.com/sipwise/cleanup-tools.git
 
 Package: ngcp-cleanup-tools-ce
 Architecture: all
@@ -24,8 +24,8 @@ Provides:
  ngcp-cleanup-tools,
 Replaces:
  ngcp-cleanup-tools,
-Description: Database entry and binlog cleanup
- Erase and dump database entries and mysql binlogs.
+Description: NGCP provider:CE Database entry and binlog cleanup
+ Erase and dump database entries and MySQL binlogs.
 
 Package: ngcp-cleanup-tools-pro
 Architecture: all
@@ -43,5 +43,5 @@ Provides:
  ngcp-cleanup-tools,
 Replaces:
  ngcp-cleanup-tools,
-Description: Database entry and binlog cleanup
- Erase and dump database entries and mysql binlogs.
+Description: NGCP provider:PRO Database entry and binlog cleanup
+ Erase and dump database entries and MySQL binlogs.
