TT#19706 refactor to day-based processing of months
+ processing records of a month is now done day-by-day,
  so the script will effectively distribute load, when
  registered as a daily cron job.
+ handle 'from_unixtime(colname)' explicitly, to hit
  index properly. essential speed up of "backup" mode.
  - no changes to acc-cleanup.conf/.tt needed
+ fix month interval date calculations to make it safe
  to run it on any day - in particular this means to get rid
  of avg days per month (30.3475).
  todo: introduce DateTime.

Change-Id: I39744be3f25c7211a8d54d61a1c7a219181a5847

--- a/acc-cleanup.conf
+++ b/acc-cleanup.conf
@@ -43,12 +43,13 @@
 # suffix of _YYYYMM.
 # The following variables are used:
 # "time-column": The name of the column in the table to use for determining
-# which month a record belong to. Must be a "datetime" column.
+# which month a record belong to. Must be a "datetime" column, so for a column
+# showing epoch seconds, 'from_unixtime(column name)' has to be used.
 # "batch": How many records to process within a single statement. If unset or
 # <= 0, it does them all at once.
 # "backup-months": How many months worth of records to keep in the table and
-# not move into the monthly backup tables. Months are always processed as a
-# whole and this specifies how many months to keep AT MOST. In other words,
+# not move into the monthly backup tables. Months are always processed day
+# by day and this specifies how many months to keep AT MOST. In other words,
 # if the script is started on December 15th and this value is set to "2", then
 # all of December and November is kept, and all of October will be backed up.
 # "backup-retro": How many months to process for backups, going backwards in
