TT#3668 acc-cleanup script rework, partitioning support
    * logic moved to NGCP::Cleanup
    * refactored NGCP::Cleanup to support OO, logging
    * implemented table partitioning support
    * optimized speed for key columns containing timestamps

Change-Id: I8eaec0f42d15de30daf65753e5f04bc9b104c9cc

--- a/debian/control
+++ b/debian/control
@@ -13,8 +13,8 @@ Package: ngcp-cleanup-tools-ce
 Architecture: all
 Depends:
  libconfig-any-perl,
+ libdatetime-perl,
  libdbi-perl,
- libsys-syslog-perl,
  ${misc:Depends},
  ${perl:Depends},
 Conflicts:
@@ -31,9 +31,9 @@ Package: ngcp-cleanup-tools-pro
 Architecture: all
 Depends:
  libconfig-any-perl,
+ libdatetime-perl,
  libdbi-perl,
  libredis-perl,
- libsys-syslog-perl,
  ${misc:Depends},
  ${perl:Depends},
 Conflicts:
