--- a/acc-cleanup.conf
+++ b/acc-cleanup.conf
@@ -36,6 +36,11 @@
 # specification.
 # The database connection remains active up to the next "connect" statement.
 #
+# "use-partitioning": If a table supports partitioning and the value is set
+# to "yes", then it is partitioned using the time-column or the timestamp
+# column, otherwise the usually (and slow) method is used to delete/move
+# data by chunks.
+#
 # Create monthly backup tables:
 #   backup <table name>
 # Moves old records out of the specified table and sorts them into monthly
@@ -44,6 +49,8 @@
 # The following variables are used:
 # "time-column": The name of the column in the table to use for determining
 # which month a record belong to. Must be a "datetime" column.
+# "timestamp-column": The name of the column in the table to use for determining
+# which month a record belong to. Must be a "decimal(13,3)" column.
 # "batch": How many records to process within a single statement. If unset or
 # <= 0, it does them all at once.
 # "backup-months": How many months worth of records to keep in the table and
@@ -82,6 +89,8 @@
 # "cleanup-days": Deleting everything older than this many days.
 #
 ############
+
+debug = 1
 
 batch = 10000
 archive-target = /tmp
