--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: extra
 Maintainer: Sipwise Development Team <support@sipwise.com>
 Build-Depends:
  debhelper (>= 9~),
+ libmodule-build-perl,
 Standards-Version: 3.9.8
 Homepage: https://www.sipwise.com/
 Vcs-Browser: https://github.com/sipwise/cleanup-tools.git
