--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,9 @@
 Source: ngcp-cleanup-tools
 Section: utils
-Priority: extra
+Priority: optional
 Maintainer: Sipwise Development Team <support@sipwise.com>
 Build-Depends:
- debhelper (>= 9~),
+ debhelper (>= 10~),
  libmodule-build-perl,
 Standards-Version: 3.9.8
 Homepage: https://www.sipwise.com/
