TT#43164 backup-months, retro-months changes
    * backup-months is replaced by keep-months
    * backup-retro is removed, now everything that is
      below keep-months is backed up
    * backup-months and backup-retro are marked as deprecated
      and acc-cleanup stops with the a mandatory request to
      upgrade the config file
    * "over-a-year" months difference is now correctly calculated
    * slightly simplified min-max dates calculations and iterations

Change-Id: If1e4ae95713a06dc140a4c1f322d23e496493dda

--- a/acc-cleanup.conf
+++ b/acc-cleanup.conf
@@ -53,21 +53,17 @@
 # which month a record belong to. Must be a "decimal(13,3)" column.
 # "batch": How many records to process within a single statement. If unset or
 # <= 0, it does them all at once.
-# "backup-months": How many months worth of records to keep in the table and
+# "keep-months": How many months worth of records to keep in the table and
 # not move into the monthly backup tables. Months are always processed as a
 # whole and this specifies how many months to keep AT MOST. In other words,
 # if the script is started on December 15th and this value is set to "2", then
 # all of December and November is kept, and all of October will be backed up.
-# "backup-retro": How many months to process for backups, going backwards in
-# time. Using the example above, with this value set to "3", the months
-# October, September and August would be backed up, while any older records
-# would be left untouched.
 #
 # Archiving (dumping) old monthly backup tables:
 #   archive <table name>
 # Create an SQL dump out of too old tables created by the "backup" statement
 # and drop them afterwards. Uses the following variables:
-# "archive-months": Uses the same logic as the "backup-months" variable above.
+# "archive-months": Uses the same logic as the "keep-months" variable above.
 # If set to "12" and the script was started on December 15th, it will start
 # archiving with the December table of the previous year. Archiving continues
 # month by month, going backwards in time, until the script encounters a
@@ -128,8 +124,7 @@ password = 1freibier!
 #
 #   connect accounting
 #   time-column = start_time
-#   backup-months = 7
-#   backup-retro = 3
+#   keep-months = 7
 #   backup cdr
 #   archive-months = 13
 #   archive-target = /backup
