TT#49150 Add missing perl module dependencies
Change-Id: Idd46ba8b3ef34c3cc3ffa8392f31dba9429cee18

--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,10 @@ Architecture: all
 Depends:
  libconfig-any-perl,
  libdatetime-perl,
+ libdbd-mysql-perl,
  libdbi-perl,
+ liblog-log4perl-perl,
+ libredis-perl,
  ${misc:Depends},
  ${perl:Depends},
 Conflicts:
@@ -33,7 +36,9 @@ Architecture: all
 Depends:
  libconfig-any-perl,
  libdatetime-perl,
+ libdbd-mysql-perl,
  libdbi-perl,
+ liblog-log4perl-perl,
  libredis-perl,
  ${misc:Depends},
  ${perl:Depends},
