TT#72908 Change permissions of /ngcp-data/backup/cdr to 0700
We want backups to only be readable by the root user, when possible.

Change-Id: I236cbac8811c1dd3d9e0abcbec82318f2e99d215

--- a/debian/rules
+++ b/debian/rules
@@ -5,3 +5,9 @@
 
 %:
 	dh $@
+
+# TT#72908 Change permissions of /ngcp-data/backup/cdr to 0700
+# We want backups to only be readable by the root user, when possible.
+override_dh_fixperms:
+	dh_fixperms
+	chmod -v 0700 ngcp-data/backup/cdr
