TT#81052 Move ngcp-voicemail-table-cleanup from ngcp-system-tools
Rename it to match the current naming convention, and add backwards
compatibility symlinks until the next LTS.

Change-Id: I0c02c8695fc37f8e7a7e15114c0b7a7f7545d102

--- a/debian/control
+++ b/debian/control
@@ -28,6 +28,7 @@ Provides:
  ngcp-cleanup-tools,
 Replaces:
  ngcp-cleanup-tools,
+ ngcp-system-tools-ce (<< 8.5.0.0),
 Description: NGCP provider:CE Database entry and binlog cleanup
  Erase and dump database entries and MySQL binlogs.
 
@@ -49,5 +50,6 @@ Provides:
  ngcp-cleanup-tools,
 Replaces:
  ngcp-cleanup-tools,
+ ngcp-system-tools-pro (<< 8.5.0.0),
 Description: NGCP provider:PRO Database entry and binlog cleanup
  Erase and dump database entries and MySQL binlogs.
