TT#88050 Remove dependencies on obsolete packages
These packages got removed before the last LTS, so it is now safe to
remove dependencies on them.

Change-Id: I2f25c59d105ccd0e5be5b0422ac48b82926f1b10

--- a/debian/control
+++ b/debian/control
@@ -22,13 +22,11 @@ Depends:
  ${misc:Depends},
  ${perl:Depends},
 Conflicts:
- ngcp-cleanup-tools (<= 0.2.1),
- ngcp-cleanup-tools-pro,
+ ngcp-cleanup-tools,
 Provides:
  ngcp-cleanup-tools,
 Replaces:
  ngcp-cleanup-tools,
- ngcp-system-tools-ce (<< 8.5.0.0),
 Description: NGCP provider:CE Database entry and binlog cleanup
  Erase and dump database entries and MySQL binlogs.
 
@@ -44,12 +42,10 @@ Depends:
  ${misc:Depends},
  ${perl:Depends},
 Conflicts:
- ngcp-cleanup-tools (<= 0.2.1),
- ngcp-cleanup-tools-ce,
+ ngcp-cleanup-tools,
 Provides:
  ngcp-cleanup-tools,
 Replaces:
  ngcp-cleanup-tools,
- ngcp-system-tools-pro (<< 8.5.0.0),
 Description: NGCP provider:PRO Database entry and binlog cleanup
  Erase and dump database entries and MySQL binlogs.
