TT#124273 Use execute_after_ instead of override_ for dh command
This avoids duplicating the call we want to hook into.

Change-Id: Ifca996818ab3e8cbdf50068a76016cf8958c752a

--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,5 @@
 
 # TT#72908 Change permissions of /ngcp-data/backup/cdr to 0700
 # We want backups to only be readable by the root user, when possible.
-override_dh_fixperms:
-	dh_fixperms
+execute_after_dh_fixperms:
 	chmod -v 0700 debian/ngcp-cleanup-tools-*/ngcp-data/backup/cdr
