--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,11 @@ Source: ngcp-cleanup-tools
 Section: utils
 Priority: optional
 Maintainer: Sipwise Development Team <support@sipwise.com>
+Rules-Requires-Root: no
 Build-Depends:
  debhelper-compat (= 13),
  libmodule-build-perl,
-Standards-Version: 4.5.1
+Standards-Version: 4.6.2
 Homepage: https://www.sipwise.com/
 Vcs-Browser: https://github.com/sipwise/cleanup-tools.git
 Vcs-Git: https://github.com/sipwise/cleanup-tools.git
